crates/pvm-contract-macros/tests/ui/receive_takes_self.stderr
error: `#[receive]` must take `&mut self`
 --> tests/ui/receive_takes_self.rs:7:9
  |
7 | /         #[pvm_contract_macros::receive]
8 | |         pub fn receive(&self) {}
  | |________________________________^
